fix: correct icon vertical alignment to be centered, also for text coming afterwards

--- a/packages/dnb-ui-lib/src/components/icon/style/_icon.scss
+++ b/packages/dnb-ui-lib/src/components/icon/style/_icon.scss
@@ -6,6 +6,11 @@
 .dnb-icon {
   display: inline-block;
 
+  // sine we use vertical-align: top on the SVG
+  // we have to move center the alignment here again
+  // else basic text aferwars will get aligned on top
+  vertical-align: middle;
+
   font-size: 1rem; // to make sure we have always the same starting point
   line-height: 1rem; // for vertical alignment, we have to have no line-height
   color: inherit;
